# mon-repo

./: .gitignore  CLAUDE.md  README.md  SECU.md  SECURITY.md  package-lock.json  package.json
.github/: dependabot.yml
.github/scripts/: stamp-version.mjs
.github/workflows/: release.yml
packaging/arch/: PKGBUILD  gitui.desktop
security-report/: dast.json  deps.json  findings.sarif  infra.json  report.md  sast.json  secrets.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  model.rs  proc.rs
src-tauri/src/assist/: mod.rs
src-tauri/src/diff/: mod.rs
src-tauri/src/docs/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/github/: mod.rs
src-tauri/src/links/: mod.rs
src-tauri/src/meta/: mod.rs
src-tauri/src/notify/: mod.rs
src-tauri/src/stack/: mod.rs
src-tauri/src/term/: mod.rs
src/components/: AddRepoDialog.tsx  AppUpdateBanner.tsx  BranchDetail.tsx  BranchDialogs.tsx  BranchRow.tsx  ChatDock.tsx  CommentList.tsx  CommitDetailPanel.tsx  CommitFilter.tsx  CommitGraph.tsx  CommitNodeCard.tsx  CommitPage.tsx  ConflictPanel.tsx  DependencyGate.tsx  DiffExplorer.tsx  DiffView.tsx  DocsView.tsx  GraphNode.tsx  HelpPage.tsx  IssueDetailPanel.tsx  IssuesList.tsx  Modal.tsx  PrBadge.tsx  PrDetailPanel.tsx  PrList.tsx  PrPage.tsx  RepoGraphView.tsx  StackGraph.tsx  StackTree.tsx  SubmitDialog.tsx  TerminalDock.tsx  WelcomeScreen.tsx
src/lib/: api.ts  notify.ts  safeOpen.ts  types.ts
