[package]
name = "gitui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
portable-pty = "0.8"
base64 = "0.22"
# Tiny HTTP client to query Ollama's /api/tags for model detection. No TLS (avoids a C
# toolchain dep): in normal use the host is loopback — Ollama *cloud* models are proxied by
# the local daemon — and the user-supplied host is validated against SSRF / metadata targets
# in `assist::validate_ollama_host` before any request.
ureq = { version = "2", default-features = false }
# URL parsing/validation for the user-supplied Ollama host (SSRF / exfiltration guard).
url = "2"

